--- a/src/components/input-autocomplete/InputAutocomplete.css
+++ b/src/components/input-autocomplete/InputAutocomplete.css
@@ -1,35 +1,54 @@
 .search {
-    display: flex;
-    align-items: flex-start;
-    position: relative;
+	display: flex;
+	align-items: flex-start;
+	position: relative;
 }
 li {
-    list-style: none;
+	list-style: none;
 }
 .autocomplete {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
+	width: 50%;
+	display: flex;
+	flex-direction: column;
 }
 .autocomplete-list {
-    background-color: #a5a5a5;
-    margin: 0;
-    padding-left: 0;
-    position: absolute;
-    width: inherit;
-    z-index: 1;
-    top: 100%;
-
+	background-color: #f1f1f1;
+	margin: 0;
+	padding-left: 0;
+	position: absolute;
+	width: inherit;
+	z-index: 1;
+	top: 100%;
 }
 .autocomplete-list-element {
-    border: 1px solid gray;
-    border-top: none;
-    padding: 0.5rem;
+	border: 1px solid gray;
+	border-top: none;
+	padding: 0.5rem;
 }
 .autocomplete-list-element:hover {
-    background-color: #ccc;
+	background-color: #ccc;
 }
 
-.userInputSearch {
-    padding: 0.5rem;
+.dropdown {
+	height: 36px;
+}
+
+.userInputSearch,
+.dropdown {
+	padding: 0.5rem;
+	border: 1px solid transparent;
+	background-color: #f1f1f1;
+	font: 16px Arial;
+	color: #6e655d;
+}
+
+.btn-search {
+	border: 1px solid transparent;
+	background-color: #ed704e;
+	color: #fff;
+	cursor: pointer;
+	height: 37px;
+	margin-left: 5px;
+	width: 80px;
+	font: 16px Arial;
 }
