--- a/src/containers/card-city/CardCity.css
+++ b/src/containers/card-city/CardCity.css
@@ -1,3 +1,20 @@
 .card {
-    border: 1px solid grey;
+	background-color: #fff;
+	border-radius: 2px;
+	display: inline-block;
+	width: 24%;
+	box-shadow: 0 14px 30px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.city-place-pollution {
+	text-align: center;
+}
+
+h3 {
+}
+
+h5 {
+}
+
+h6 {
 }
