--- a/src/containers/card-city/CardCity.css
+++ b/src/containers/card-city/CardCity.css
@@ -2,12 +2,14 @@
 	background-color: #fff;
 	border-radius: 2px;
 	display: inline-block;
-	width: 24%;
+	width: 90%;
 	box-shadow: 0 14px 30px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+	margin-bottom: 50px;
 }
 
 .city-place-pollution {
 	text-align: center;
+	min-height: 150px;
 }
 
 h3 {
