--- a/src/components/loader/Loader.css
+++ b/src/components/loader/Loader.css
@@ -7,6 +7,9 @@
 }
 
 .spinner {
+	position: relative;
+	top: 50%;
+	left: 50%;
 	border: 10px solid #f3f3f3;
 	border-top: 10px solid #ed704e;
 	border-radius: 50%;
