--- a/src/components/input-autocomplete/InputAutocomplete.css
+++ b/src/components/input-autocomplete/InputAutocomplete.css
@@ -1,27 +1,21 @@
 .search {
 	display: flex;
 	align-items: flex-start;
-	position: relative;
-	left: 25%;
+	justify-content: center;
 	padding: 20px;
 	padding-bottom: 0;
-	width: 600px;
+	flex-wrap: wrap;
 }
 
 .autocomplete {
-	width: 380px;
 	display: flex;
 	flex-direction: column;
+	flex-grow: 1;
+	max-width: 400px;
 }
 
 .userInputSearch {
 	box-shadow: 0 10px 15px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
-}
-
-.autocomplete-list {
-}
-
-.autocomplete-list-element {
 }
 
 .userInputSearch,
