--- a/src/containers/card-city/CardCity.css
+++ b/src/containers/card-city/CardCity.css
@@ -3,7 +3,7 @@
 	border-radius: 2px;
 	width: 90%;
 	box-shadow: 0 14px 30px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-	margin-bottom: 50px;
+	margin: 0 auto 50px;
 }
 
 .city-place-pollution {
