--- a/src/components/loader/Loader.css
+++ b/src/components/loader/Loader.css
@@ -10,11 +10,11 @@
 	position: relative;
 	top: 50%;
 	left: 50%;
-	border: 10px solid #f3f3f3;
-	border-top: 10px solid #ed704e;
+	border: 0.6rem solid #f3f3f3;
+	border-top: 0.6rem solid #ed704e;
 	border-radius: 50%;
-	width: 40px;
-	height: 40px;
+	width: 2.5rem;
+	height: 2.5rem;
 	animation: spin 2s linear infinite;
 }
 
